# redash-python

./: .gitignore  .markdownlint.yaml  404.html  LICENSE  README.md  demo.ipynb  index.html  kek.json  pyproject.toml  setup.py  sitemap.xml
.github/workflows/: docs.yml  publish.yml
api/redash/: index.html
api/services/alerts/: index.html
api/services/base/: index.html
api/services/dashboards/: index.html
api/services/data_sources/: index.html
api/services/destinations/: index.html
api/services/groups/: index.html
api/services/mixins/: index.html
api/services/queries/: index.html
api/services/query_snippets/: index.html
api/services/users/: index.html
api/services/widgets/: index.html
docs/: README.md  build.novella  mkdocs.yml  requirements.txt
docs/_site/: 404.html  index.html
docs/_site/api/redash/: index.html
docs/_site/api/services/alerts/: index.html
docs/_site/api/services/base/: index.html
docs/_site/api/services/dashboards/: index.html
docs/_site/api/services/data_sources/: index.html
docs/_site/api/services/destinations/: index.html
docs/_site/api/services/groups/: index.html
docs/_site/examples/archive_user/: index.html
docs/_site/examples/create_client_dashboard/: index.html
docs/content/: examples.md  index.md
docs/content/api/: redash.md
docs/content/api/services/: alerts.md  base.md  dashboards.md  data_sources.md  destinations.md  groups.md  mixins.md  queries.md  query_snippets.md  users.md  widgets.md
docs/content/examples/: create_client_dashboard.md
examples/: README.md  archive_user.py  create_client_template.py  index.html
examples/archive_user/: index.html
examples/create_client_dashboard/: index.html
redash_python/: __init__.py  redash.py
redash_python/services/: __init__.py  alerts.py  base.py  dashboards.py  data_sources.py  destinations.py  groups.py  mixins.py  queries.py  query_snippets.py  users.py  widgets.py
redash_python/utils/: exceptions.py  json_encoder.py
search/: search_index.json
(+5 files in other folders)
