[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redash-python"
version = "0.0.2"
description = "A more complete Python client for the Redash API"
readme = "README.md"
authors = [{ name = "blacksuan19", email = "py@blacksuan19.dev" }]
license = { file = "LICENSE" }
classifiers = [
    # "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["redash"]
dependencies = ["requests"]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/blacksuan19/redash_python"