[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redash-python"
version = "0.3.21"
description = "A more complete Python client for the Redash API"
readme = "README.md"
authors = [{ name = "blacksuan19", email = "py@blacksuan19.dev" }]
license = { text = "BSD-2-Clause" }
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["redash"]
dependencies = ["requests"]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = ["black", "bumpver", "pip-tools", "wheel", "requests"]

[project.urls]
Homepage = "https://redash.blacksuan19.dev/"
Documentation = "https://redash.blacksuan19.dev/"
Repository = "https://github.com/blacksuan19/redash-python/"
Issues = "https://github.com/blacksuan19/redash-python/issues"


[tool.bumpver]
current_version = "0.3.21"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"redash_python/redash.py" = ["{version}"]
"README.md" = ["PyPi-{version}"]
